EDIT accept method AND REFORMAT